Shrink map on mobile, fix current location marker bug

--- a/client/app/App.less
+++ b/client/app/App.less
@@ -246,6 +246,10 @@ a {
 }
 
 @media (max-width: 480px) {
+  .leaflet-container {
+    height: 480px;
+  }
+
   .default-container {
     padding: 0px 16px;
   }
